Update MaryUtils.java